--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_mobx: ^2.2.0
   flutter_modular: ^6.3.2
+  gap: ^3.0.1
   mobx: ^2.2.1
   objectbox: ^2.3.1
   objectbox_flutter_libs: any
